# src/modules/mahasiswa/mahasiswa.routes.js
@@ -1,5 +1,6 @@
 const express = require('express');
 const mahasiswaController = require('./mahasiswa.controller');
+const jadwalKuliahController = require('./jadwalkuliah.controller');
 const authMiddleware = require('../../middleware/authMiddleware'); // Import middleware
 
 const router = express.Router();
@@ -12,6 +13,9 @@ router.use(authMiddleware);
 
 // Route untuk mendapatkan semua data mahasiswa
 router.get('/list', mahasiswaController.getAllMahasiswa);
+
+// Route untuk mendapatkan jadwal kuliah (Berdasarkan token)
+router.get('/jadwal', jadwalKuliahController.getJadwalKuliah);
 
 // Route untuk mendapatkan data mahasiswa berdasarkan ID
 router.get('/detail/:id', mahasiswaController.getMahasiswaById);
